<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/how_many_prayers"
        android:textSize="25sp"
        android:layout_marginTop="60dp"
        />

    <EditText
        android:id="@+id/prayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/said_azkar"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio"
            >

            <RadioButton
                android:id="@+id/yes"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/yes"
                android:textSize="20sp"
                />

            <RadioButton
                android:id="@+id/np"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/no"
                android:textSize="20sp"
                />

        </RadioGroup>




    </LinearLayout>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Quran"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        />

    <EditText
        android:id="@+id/quran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/gheba"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        />

    <EditText
        android:id="@+id/gheba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/done"
        android:onClick="done"
        android:textColor="#ffffff"
        android:background="@drawable/roundedshape"
        />


</LinearLayout>

